--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EPICODE M4 D7</title>
 
     <!-- BOOTSTRAP LINK -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    
     <!-- LOCAL CSS -->
     <link rel="stylesheet" href="assets/CSS/style.css">
-  </head>
-  <body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <form onsubmit="createProduct(event)">
+                <div class="row g-4">
+                    <div class="col-12 col-lg-2">
+                        <input required class="mb-3 form-control" placeholder="name" type="text" id="name">
+                    </div>
+                    <div class="col-12 col-lg-3">
+                        <input required class="mb-3 form-control" placeholder="description" type="text" id="description">
+                    </div>
+                    <div class="col-12 col-lg-2">
+                        <input required class="mb-3 form-control" placeholder="brand" type="text" id="brand">
+                    </div>
+                    <div class="col-12 col-lg-3">
+                        <input class="mb-3 form-control" placeholder="Image URL" type="text" id="imageURL">
+                    </div>
+                    <div class="col-12 col-lg-1">
+                        <input required class="mb-3 form-control" placeholder="price" type="number" id="price">
+                    </div>
+                    <div class="col-12 col-lg-1">
+                        <button class="btn btn-primary w-100">CREA</button>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+
+
+    <div class="container">
+        <div class="row main">
+
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="assets/JS/script.js"></script>
 </body>
+
 </html>
