--- a/AddProduct.html
+++ b/AddProduct.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EPICODE M4 D7</title>
+    <link rel="icon" href="https://pages.ebay.com/favicon.ico">
 
     <!-- BOOTSTRAP LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +22,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/IMGs/logo.svg" height="32">
+                    <img src="assets/IMGs/logo.png" height="32">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -35,9 +36,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="AddProduct.html">Aggiungi</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
                 </div>
@@ -79,7 +77,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     
-    <script src="assets/JS/script.js"></script>
+    <script src="assets/JS/MainScript.js"></script>
 </body>
 
 </html>
