--- a/Prodotto.html
+++ b/Prodotto.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EPICODE M4 D7</title>
+    <link rel="icon" href="https://pages.ebay.com/favicon.ico">
 
     <!-- BOOTSTRAP LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,16 +18,72 @@
 </head>
 
 <body>
+    <div class="container mb-4"> <!-- NAVBAR -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/IMGs/logo.png" height="32">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="AddProduct.html">Aggiungi</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
     <div class="container">
         <div class="row">
-            
+            <div class="col-md-4">
+                <img class="rounded shadow-lg prova w-100" src="">
+            </div>
+            <div class="col-md-8 d-flex flex-column justify-content-between">
+                <div class="text">
+                    <h1 id="title" class="mb-4">Re Mida</h1>
+                    <p class="w-75">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dictum sit amet est id efficitur.
+                        Suspendisse sagittis ipsum tortor, eu placerat justo elementum nec. Sed nisi magna, tristique ac
+                        sem
+                        nec, ullamcorper dignissim urna. Sed vel sem volutpat, finibus neque sed, rhoncus mi. Maecenas
+                        semper, felis non lacinia commodo, sapien lacus varius est, nec ullamcorper risus ex id tortor.
+                        In
+                        tempor mollis urna nec fermentum. Fusce vestibulum nunc porta urna posuere, eu faucibus metus
+                        rhoncus. Donec eu purus sit amet ligula suscipit aliquet. Donec vitae erat iaculis, varius
+                        tellus
+                        eu, lobortis quam. Fusce ultricies tellus tortor, eget semper ipsum rhoncus sit amet. Nunc
+                        egestas
+                        nisl quis suscipit vulputate. Nullam eget purus urna. Sed sollicitudin ipsum at quam faucibus
+                        egestas. Nunc efficitur mattis nunc sed imperdiet.
+                    </p>
+                    <p id="price" class="text-white fs-4 mt-4 fw-bold"></p>
+                </div>
+                <div class="buttons">
+                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-bag"></i></button>
+                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-hand-thumbs-up"></i></button>
+                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-hand-thumbs-down"></i></button>
+                </div>
+
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="assets/JS/script.js"></script>
+
+    <script src="assets/JS/MainScript.js"></script>
+    <script src="assets/JS/ShowProduct.js"></script>
 </body>
 
 </html>
