--- a/Prodotto.html
+++ b/Prodotto.html
@@ -11,14 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    
+
     <!-- LOCAL CSS -->
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
 <body>
-    <div class="container mb-4"> <!-- NAVBAR -->
+    <!-- NAVBAR -->
+    <div class="container mb-4">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -43,40 +43,85 @@
         </nav>
     </div>
 
+    <!-- MAIN -->
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <img class="rounded shadow-lg prova w-100" src="">
+            <div class="col-lg-3">
+                <img class="rounded shadow-lg prova w-100 mb-4"
+                    src="https://m.media-amazon.com/images/I/71CPu5HL3sL._SL1000_.jpg">
             </div>
-            <div class="col-md-8 d-flex flex-column justify-content-between">
-                <div class="text">
-                    <h1 id="title" class="mb-4">Re Mida</h1>
-                    <p class="w-75">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dictum sit amet est id efficitur.
-                        Suspendisse sagittis ipsum tortor, eu placerat justo elementum nec. Sed nisi magna, tristique ac
-                        sem
-                        nec, ullamcorper dignissim urna. Sed vel sem volutpat, finibus neque sed, rhoncus mi. Maecenas
-                        semper, felis non lacinia commodo, sapien lacus varius est, nec ullamcorper risus ex id tortor.
-                        In
-                        tempor mollis urna nec fermentum. Fusce vestibulum nunc porta urna posuere, eu faucibus metus
-                        rhoncus. Donec eu purus sit amet ligula suscipit aliquet. Donec vitae erat iaculis, varius
-                        tellus
-                        eu, lobortis quam. Fusce ultricies tellus tortor, eget semper ipsum rhoncus sit amet. Nunc
-                        egestas
-                        nisl quis suscipit vulputate. Nullam eget purus urna. Sed sollicitudin ipsum at quam faucibus
-                        egestas. Nunc efficitur mattis nunc sed imperdiet.
-                    </p>
-                    <p id="price" class="text-white fs-4 mt-4 fw-bold"></p>
-                </div>
-                <div class="buttons">
-                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-bag"></i></button>
-                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-hand-thumbs-up"></i></button>
-                    <button class="btn rounded-circle me-2" style="width: 56px;"><i class="bi bi-hand-thumbs-down"></i></button>
-                </div>
+            <div class="col-lg-9">
+                <div class="row px-3">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-8">
+                        <div class="text">
+                            <h1 id="title" class="">Slam Dunk 14</h1>
+                            <h5 class="text-muted fs-6"><i class="bi bi-calendar me-2"></i>19 Novembre 2020</h5>
+                            <hr>
+                            <p>
+                                I preliminari della prefettura di Kanagawa hanno designato le due squadre che
+                                parteciperanno
+                                all'interhigh. Il campionato nazionale si prepara ad accogliere i club qualificati: per
+                                i
+                                ragazzi dello Shohoku è tempo di metterci impegno… e non solo in palestra!
+                            </p>
+                            <p id="price" class="text-white fs-4 mt-4 fw-bold"></p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                        <div class="rounded-4 p-4" style="border: 3px solid var(--color-grey4);">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <p class="mb-1">Condizione</p>
+                                    <p class="mb-1 fw-medium">Nuovo</p>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-4">
+                                    <p class="mb-0">Prezzo</p>
+                                    <p class="mb-0 fw-medium">$ 6.65</p>
+                                </div>
+                                <hr>
+                                <p class="fw-light">Consegna senza costi aggiuntivi domani, 9 ottobre</p>
+                                <p><i class="bi bi-geo-alt me-2"></i>Via Massimo Ranieri, 25, RA</p>
+                                <h5 class="text-success mb-3 fs-6"><i class="bi bi-circle-fill text-success me-2"></i>Disponibile</h5>
+                            </div>
+                            <div class="mt-5">
+                                <button class="btn btn-primary w-100 rounded-pill mb-2 border-0 py-2" style="background-color: var(--color-grey4); color: var(--color-black);">Acquista Ora</button>
+                                <button class="btn btn-primary w-100 rounded-pill border-0 py-2" style="background-color: var(--color-grey4); color: var(--color-black);">Aggiungi al Carrello</button>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer class="pt-5">
+        <div class="container">
+            <div class="row">
+                <!-- Colonna 1 -->
+                <div class="col-12 flex-wrap">
+                    <ul class="list-unstyled d-flex flex-wrap g-4">
+                        <li><a href="#">Aziende del gruppo eBay</a></li>
+                        <li><a href="#">Bacheca Annunci</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Spazio Sicurezza</a></li>
+                        <li><a href="#">Come Vendere</a></li>
+                        <li><a href="#">Spazio Venditori</a></li>
+                        <li><a href="#">Regole eBay</a></li>
+                        <li><a href="#">Traduzione</a></li>
+                        <li><a href="#">Pubblicità eBay</a></li>
+                        <li><a href="#">Affiliazione</a></li>
+                        <li><a href="#">Aiuto e Contatti</a></li>
+                        <li><a href="#">Mappa del sito</a></li>
+                    </ul>
+                    <p class="footer-text">Copyright © 1995-2023 eBay Inc. Tutti i diritti riservati. Accessibilità,
+                        Accordo per gli utenti,
+                        Privacy, Condizioni di utilizzo dei servizi di pagamento, Cookie e AdChoice</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
