--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <!-- LOCAL CSS -->
     <link rel="stylesheet" href="assets/CSS/style.css">
@@ -48,6 +47,33 @@
 
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <!-- Colonna 1 -->
+                <div class="col-12 flex-wrap">
+                    <ul class="list-unstyled d-flex flex-wrap g-4">
+                        <li><a href="#">Aziende del gruppo eBay</a></li>
+                        <li><a href="#">Bacheca Annunci</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Spazio Sicurezza</a></li>
+                        <li><a href="#">Come Vendere</a></li>
+                        <li><a href="#">Spazio Venditori</a></li>
+                        <li><a href="#">Regole eBay</a></li>
+                        <li><a href="#">Traduzione</a></li>
+                        <li><a href="#">Pubblicità eBay</a></li>
+                        <li><a href="#">Affiliazione</a></li>
+                        <li><a href="#">Aiuto e Contatti</a></li>
+                        <li><a href="#">Mappa del sito</a></li>
+                    </ul>
+                    <p class="footer-text">Copyright © 1995-2023 eBay Inc. Tutti i diritti riservati. Accessibilità,
+                        Accordo per gli utenti,
+                        Privacy, Condizioni di utilizzo dei servizi di pagamento, Cookie e AdChoice</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
