--- a/Prodotto.html
+++ b/Prodotto.html
@@ -18,10 +18,10 @@
 
 <body>
     <!-- NAVBAR -->
-    <div class="container mb-4">
+    <div class="container-fluid sticky-top" style="background-color: var(--color-grey1);">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/IMGs/logo.png" height="32">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -44,27 +44,24 @@
     </div>
 
     <!-- MAIN -->
-    <div class="container">
-        <div class="row">
+    <div class="container mt-4">
+        <!-- PRODUCT -->
+        <div class="row pb-3">
             <div class="col-lg-3">
-                <img class="rounded shadow-lg prova w-100 mb-4"
-                    src="https://m.media-amazon.com/images/I/71CPu5HL3sL._SL1000_.jpg">
+                <img class="rounded shadow-lg prova w-100 mb-5" id="cover" src="">
             </div>
             <div class="col-lg-9">
                 <div class="row px-3">
                     <div class="col-12 col-md-6 col-lg-6 col-xl-8">
                         <div class="text">
-                            <h1 id="title" class="">Slam Dunk 14</h1>
-                            <h5 class="text-muted fs-6"><i class="bi bi-calendar me-2"></i>19 Novembre 2020</h5>
+                            <h1 id="title"></h1>
+                            <h5 class="text-muted fs-6" id="date">
+                                <i class="bi bi-calendar me-2"></i>
+                            </h5>
                             <hr>
-                            <p>
-                                I preliminari della prefettura di Kanagawa hanno designato le due squadre che
-                                parteciperanno
-                                all'interhigh. Il campionato nazionale si prepara ad accogliere i club qualificati: per
-                                i
-                                ragazzi dello Shohoku è tempo di metterci impegno… e non solo in palestra!
+                            <p id="description" class="TextCut Description">
+
                             </p>
-                            <p id="price" class="text-white fs-4 mt-4 fw-bold"></p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 col-xl-4">
@@ -76,22 +73,34 @@
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mb-4">
                                     <p class="mb-0">Prezzo</p>
-                                    <p class="mb-0 fw-medium">$ 6.65</p>
+                                    <p class="mb-0 fw-medium" id="price"></p>
                                 </div>
                                 <hr>
                                 <p class="fw-light">Consegna senza costi aggiuntivi domani, 9 ottobre</p>
                                 <p><i class="bi bi-geo-alt me-2"></i>Via Massimo Ranieri, 25, RA</p>
-                                <h5 class="text-success mb-3 fs-6"><i class="bi bi-circle-fill text-success me-2"></i>Disponibile</h5>
+                                <h5 class="text-success mb-3 fs-6"><i
+                                        class="bi bi-circle-fill text-success me-2"></i>Disponibile</h5>
                             </div>
                             <div class="mt-5">
-                                <button class="btn btn-primary w-100 rounded-pill mb-2 border-0 py-2" style="background-color: var(--color-grey4); color: var(--color-black);">Acquista Ora</button>
-                                <button class="btn btn-primary w-100 rounded-pill border-0 py-2" style="background-color: var(--color-grey4); color: var(--color-black);">Aggiungi al Carrello</button>
+                                <button class="btn btn-primary w-100 rounded-pill mb-2 border-0 py-2"
+                                    style="background-color: var(--color-grey4); color: var(--color-black);">
+                                    <i class="bi bi-bag-check me-2"></i>Acquista Ora
+                                </button>
+                                <button class="btn btn-primary w-100 rounded-pill border-0 py-2"
+                                    style="background-color: var(--color-grey4); color: var(--color-black);">Aggiungi al
+                                    Carrello</button>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
+        </div>
+        <hr>
+        <!-- CORRELATED PRODUCTS -->
+        <h3 class="py-3">Altri Prodotti che potrebbero interessarti: </h3>
+        <div class="row g-4 products">
+
         </div>
     </div>
 
