--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 </head>
 
 <body>
-    <div class="container mb-4"> <!-- NAVBAR -->
+
+    <!-- NAVBAR -->
+    <div class="container-fluid sticky-top" style="background-color: var(--color-grey1);">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/IMGs/logo.png" height="32">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,12 +44,46 @@
         </nav>
     </div>
 
-    <div class="container mb-5"> <!-- MAIN ROW -->
-        <div class="row g-4 main">
+    <!-- HERO -->
+    <div class="p-5 mb-4" style="background-color: var(--color-grey2);">
+        <div class="container py-5">
+            <img src="assets/IMGs/EPICODE LOGO.png" alt="logo" class="mb-4" height="56">
+            <p class="col-md-8 fs-5 mb-4">Questo compito di fine modulo consisteva nel creare un e-shop accativante con la
+                possibilità di aggiungere, eliminare e modificare i prodotti a proprio piacimento con l'aiuto di un
+                endpoint personalizzato</p>
+            <button class="btn btn-lg me-2" style="background-color: var(--color-grey3);" type="button">
+                <a href="https://github.com/SoloAlessio/EPICODE_M4_D7">
+                    <svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32"
+                        data-view-component="true" class="octicon octicon-mark-github v-align-middle color-fg-default">
+                        <path
+                            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
+                        </path>
+                    </svg>
+                </a>
+            </button>
+            <button class="btn btn-lg" style="background-color: var(--color-grey3);" type="button">
+                <a href="https://getbootstrap.com">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="d-block"
+                        viewBox="0 0 118 94" role="img">
+                        <title>Bootstrap</title>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
+                            fill="currentColor"></path>
+                    </svg>
+                </a>
+            </button>
+        </div>
+    </div>
+
+    <!-- MAIN ROW -->
+    <div class="container mb-5">
+        <h3 class="mb-4">Prodotti</h3>
+        <div class="row g-4 products">
 
         </div>
     </div>
 
+    <!-- FOOTER -->
     <footer>
         <div class="container">
             <div class="row">
